# repro-rules-rust-cross-compile

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  flake.nix
repro-app/: BUILD.bazel  Cargo.toml
repro-app/src/: main.rs
repro-lib/: BUILD.bazel  Cargo.toml
repro-lib/src/: lib.rs
